k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
  namespace: prod
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
      - name: my-app
        image: 711387103278.dkr.ecr.us-east-1.amazonaws.com/my-app:latest
        ports:
        - containerPort: 8000
        readinessProbe:
          httpGet:
            path: /metrics
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 10
