k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app-svc
  namespace: prod
spec:
  selector:
    app: my-app
  ports:
    - port: 80
      targetPort: 8000
  type: ClusterIP
